--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="JAMES BELL - Full-Stack Web Developer specialising in JavaScript & PHP.">
+    <meta name="robots" content="index,follow">
+    <link rel="canonical" href="https://jamesbell.net/">
+    <link rel="icon" href="/favicon.ico">
+
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" type="text/css">
 </head>
 <body>
-    <div id="el"></div>
+    <main class="wrapper" role="main">
+        <section class="main">
+            <div class="flex-1">
+                <a href="#" id="logo">
+                    <img src="../src/images/website-header-2.png" alt="James Bell">
+                </a>
+            </div>
+
+            <div class="social flex-2">
+                <ul>
+                    <li>
+                        <a href="https://twitter.com/jamesbellnet" target="_blank" title="Twitter">
+                            <h2><i class="fab fa-twitter"></i> Twitter</h2>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/jamesbellnet/" target="_blank" title="GitHub">
+                            <h2><i class="fab fa-github"></i> GitHub</h2>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://stackoverflow.com/users/10048675/jamesbellnet?tab=profile" target="_blank" title="Stack Overflow">
+                            <h2><i class="fab fa-stack-overflow"></i> StackOverflow</h2>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="flex-3">
+                <h2 class="green">
+                    Full-Stack Web Developer<br>
+                    Specialising in JavaScript & PHP
+                </h2>
+            </div>
+
+            <div class="flex-4">
+                <p>
+                    Enquiries: <a href="mailto:hello@jamesbell.net">hello@jamesbell.net</a>
+                </p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
