Change strange image ref

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <section class="main">
             <div class="flex-1">
                 <a href="#" id="logo">
-                    <img src="../src/images/website-header-2.png" alt="James Bell">
+                    <img src="./images/website-header-2.png" alt="James Bell">
                 </a>
             </div>
 
