--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- SEO -->
+    <meta name="keywords" content="web developer, web design, website designer, developer, javascript, php">
     <meta name="description" content="JAMES BELL - Full-Stack Web Developer specialising in JavaScript & PHP.">
     <meta name="robots" content="index,follow">
     <link rel="canonical" href="https://jamesbell.net/">
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
+    <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/icons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/icons/apple-icon-72x72.png">
@@ -27,6 +31,7 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#092528">
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" type="text/css">
 </head>
 <body>
