Remove unnecessary HTML variable

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index,follow">
     <link rel="canonical" href="https://jamesbell.net/">
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>JAMES BELL | Web Developer</title>
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/icons/apple-icon-57x57.png">
