--- a/src/index.html
+++ b/src/index.html
@@ -35,28 +35,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" type="text/css">
 </head>
 <body>
-    <main class="wrapper" role="main">
-        <section class="main">
+    <main>
+        <section>
             <div class="flex-1">
-                <a href="#" id="logo">
-                    <img src="./images/website-header-2.png" alt="James Bell">
-                </a>
+                <img src="./images/website-header-2.png" alt="James Bell">
             </div>
 
-            <div class="social flex-2">
+            <div class="flex-2">
                 <ul>
                     <li>
-                        <a href="https://twitter.com/jamesbellnet" target="_blank" title="Twitter">
+                        <a href="https://twitter.com/jamesbellnet" target="_blank">
                             <h2><i class="fab fa-twitter"></i> Twitter</h2>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/jamesbellnet/" target="_blank" title="GitHub">
+                        <a href="https://github.com/jamesbellnet/" target="_blank">
                             <h2><i class="fab fa-github"></i> GitHub</h2>
                         </a>
                     </li>
                     <li>
-                        <a href="https://stackoverflow.com/users/10048675/jamesbellnet?tab=profile" target="_blank" title="Stack Overflow">
+                        <a href="https://stackoverflow.com/users/10048675/jamesbellnet?tab=profile" target="_blank">
                             <h2><i class="fab fa-stack-overflow"></i> StackOverflow</h2>
                         </a>
                     </li>
