--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
             <div class="flex-4">
                 <p>
-                    Enquiries: <a href="mailto:hello@jamesbell.net">hello@jamesbell.net</a>
+                    Enquiries: <a href="javascript:location='mailto:\u0064\u0065\u0076\u0040\u006a\u0061\u006d\u0065\u0073\u0062\u0065\u006c\u006c\u002e\u006e\u0065\u0074';void 0"><script type="text/javascript">document.write('\u0064\u0065\u0076\u0040\u006a\u0061\u006d\u0065\u0073\u0062\u0065\u006c\u006c\u002e\u006e\u0065\u0074')</script></a>
                 </p>
             </div>
         </section>
